tests/invalid/no_systems.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "InvalidNoSystems",
    "description": "ESM file with neither models nor reaction_systems",
    "authors": [
      "Test Suite"
    ],
    "license": "MIT",
    "created": "2026-02-19T00:00:00Z",
    "modified": "2026-02-19T00:00:00Z"
  },
  "data_loaders": {
    "weather": {
      "kind": "grid",
      "source": {
        "url_template": "file:///data/weather/{date:%Y%m%d_%H%M}.nc"
      },
      "spatial": {
        "crs": "EPSG:4326",
        "grid_type": "latlon",
        "staggering": {
          "lon": "center",
          "lat": "center"
        }
      },
      "variables": {
        "value": {
          "file_variable": "value",
          "units": "1"
        }
      },
      "metadata": {
        "tags": []
      }
    }
  },
  "domain": {
    "temporal": {
      "start": "2023-01-01T00:00:00Z",
      "end": "2023-01-02T00:00:00Z",
      "step": "PT1H"
    }
  }
}
